--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   <div class="hero-body">
     <div class="container">
       <h1 class="title is-1 publication-title">
-        XDen-1K: A Density Field Dataset of Real World Objects
+        XDen-1K: A Density Field Dataset of Real-World Objects
       </h1>
     </div>
     <br>
@@ -240,7 +240,7 @@
           <div class="publication-links mt-5">
             <!-- PDF Link. -->
             <span class="link-block">
-              <a href="https://XDen-1K.github.io"
+              <a href="https://arxiv.org/pdf/2512.10668"
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="fas fa-file-pdf"></i>
@@ -249,7 +249,7 @@
               </a>
             </span>
             <span class="link-block">
-              <a href="https://XDen-1K.github.io"
+              <a href="https://arxiv.org/abs/2512.10668"
                  class="external-link button is-normal is-rounded is-dark">
                 <span class="icon">
                   <i class="ai ai-arxiv"></i>
