--- a/index.html
+++ b/index.html
@@ -537,21 +537,22 @@ density fields.
 </section>
 
 <!-- BibTeX -->
+<!-- BibTeX -->
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    @misc{zhang2025xden1kdensityfielddataset,
-      title={XDen-1K: A Density Field Dataset of Real-World Objects}, 
-      author={Jingxuan Zhang and Tianqi Yu and Yatu Zhang and Jinze Wu and Kaixin Yao and Jingyang Liu and Yuyao Zhang and Jiayuan Gu and Jingyi Yu},
-      year={2025},
-      eprint={2512.10668},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV},
-      url={https://arxiv.org/abs/2512.10668}, 
-}
-</code></pre>
+    <pre><code>@misc{zhang2025xden1kdensityfielddataset,
+  title        = {XDen-1K: A Density Field Dataset of Real-World Objects},
+  author       = {Jingxuan Zhang and Tianqi Yu and Yatu Zhang and Jinze Wu and Kaixin Yao and Jingyang Liu and Yuyao Zhang and Jiayuan Gu and Jingyi Yu},
+  year         = {2025},
+  eprint       = {2512.10668},
+  archivePrefix= {arXiv},
+  primaryClass = {cs.CV},
+  url          = {https://arxiv.org/abs/2512.10668}
+}</code></pre>
   </div>
 </section>
+
 
 <!-- Footer -->
 <footer class="footer">
